--- a/OOD/index.css
+++ b/OOD/index.css
@@ -70,7 +70,7 @@ input:focus-visible{
 }
 
 input[type="range"] {
-    -webkit-appearance: none;
+    appearance: none;
     margin: 10px 15px auto auto;
     width: 200px;
     height: 7px;
@@ -87,9 +87,10 @@ input[type="range"]::-webkit-slider-thumb {
     height: 20px;
     width: 20px;
     border-radius: 50%;
+    border: 2px black;
     background: white;
     cursor: ew-resize;
-    box-shadow: 0 0 2px 0 #555;
+    box-shadow: 1px 1px 3px 1px black;
     transition: background .3s ease-in-out;
   } 
 
@@ -98,4 +99,9 @@ input[type="range"]::-webkit-slider-thumb {
     height:35px;
     border-radius:15px;
     margin:10px 10px;
+}
+
+blockquote::before{
+    content: ">>";
+
 }
